# chess_browser

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
chess_std/: Cargo.toml  LICENSE  README.md
chess_std/benches/: bench_game.rs
chess_std/src/: attack.rs  bit.rs  build.rs  builder.rs  game.rs  lib.rs  macros.rs  movegen.rs  moves.rs  position.rs  prelude.rs  state.rs  units.rs
chess_std/src/generate/: .gitignore  attack_gen.rs  mod.rs  zobrist_gen.rs
chess_std/tests/: perft.rs
js/: .gitignore  consts.ts  index.ts
src/: game.rs  lib.rs  moves.rs  perft.rs  position.rs  state.rs  units.rs
src/engine/: minimax.rs  mod.rs
static/: bootstrap.js  index.html
static/css/: index.css
